Fixed hover on mobile dev

--- a/src/components/Checkout/Form/Autocomplete/Autocomplete.module.scss
+++ b/src/components/Checkout/Form/Autocomplete/Autocomplete.module.scss
@@ -74,7 +74,9 @@
       padding: 0 20px;
       cursor: pointer;
       &:hover {
-         background: rgba(2, 2, 2, 0.1);
+         @media (min-width: 769px) {
+            background: rgba(2, 2, 2, 0.1);
+         }
       }
    }
    &.active {
