--- a/src/components/Checkout/Form/Form.module.scss
+++ b/src/components/Checkout/Form/Form.module.scss
@@ -42,7 +42,9 @@
          background: rgba(227, 24, 55, 0.2);
       }
       &:hover {
-         box-shadow: 0 0 5px rgba(227, 24, 55, 0.5);
+         @media (min-width: 769px) {
+            box-shadow: 0 0 5px rgba(227, 24, 55, 0.5);
+         }
       }
       & img {
          width: 38px;
@@ -133,15 +135,19 @@
    transition: all 0.3s ease;
    margin-bottom: 30px;
    &:hover {
-      background-color: #b8112a;
+      @media (min-width: 769px) {
+         background-color: #b8112a;
+      }
    }
    &:active {
       transform: scale(0.95);
    }
    &.disabled {
       &:hover {
-         background-color: #4f4f4f;
-         cursor: no-drop;
+         @media (min-width: 769px) {
+            background-color: #4f4f4f;
+            cursor: no-drop;
+         }
       }
    }
 }
