--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -24,7 +24,9 @@
    padding: 0 10px;
    cursor: pointer;
    &:hover {
-      background-color: #b8112a;
+      @media (min-width: 769px) {
+         background-color: #b8112a;
+      }
    }
 }
 .filters {
