--- a/src/components/sharedComponents/ProductItem/ProductItem.module.scss
+++ b/src/components/sharedComponents/ProductItem/ProductItem.module.scss
@@ -9,7 +9,9 @@
    color: #333;
    transition: all 0.3s;
    &:hover {
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
+      @media (min-width: 769px) {
+         box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
+      }
    }
 }
 .image {
@@ -96,7 +98,9 @@
       color: #fff;
       font-weight: 400;
       &:hover {
-         background-color: #333;
+         @media (min-width: 769px) {
+            background-color: #333;
+         }
       }
    }
 }
@@ -123,7 +127,9 @@
       color: #fff;
       font-weight: 400;
       &:hover {
-         background-color: #333;
+         @media (min-width: 769px) {
+            background-color: #333;
+         }
       }
    }
    &__disabled {
@@ -160,7 +166,9 @@
       cursor: pointer;
       transition: all 0.3s ease;
       &:hover {
-         background-color: #b8112a;
+         @media (min-width: 769px) {
+            background-color: #b8112a;
+         }
       }
       &:active {
          transform: scale(0.95);
@@ -184,7 +192,9 @@
          border: 1px solid rgba(0, 0, 0, 0.1);
          cursor: pointer;
          &:hover {
-            background-color: rgba(0, 0, 0, 0.1);
+            @media (min-width: 769px) {
+               background-color: rgba(0, 0, 0, 0.1);
+            }
          }
          &:active {
             transform: scale(0.95);
