--- a/src/components/sharedComponents/Sort/Sort.module.scss
+++ b/src/components/sharedComponents/Sort/Sort.module.scss
@@ -60,6 +60,8 @@
       padding: 0 20px;
    }
    &:hover {
-      background-color: rgba(79, 79, 79, 0.3);
+      @media (min-width: 769px) {
+         background-color: rgba(79, 79, 79, 0.3);
+      }
    }
 }
